[Mac] Close the page info bubble when the browser navigates

Bug: 696136
Change-Id: I2f6e51444eeafe70b491f560f48cf47e524822dd