chrome/browser/ui/cocoa/page_info/page_info_bubble_controller.h
@@ -153,6 +153,10 @@ class PageInfoUIBridge : public content::WebContentsObserver,
                          ChosenObjectInfoList chosen_object_info_list) override;
   void SetIdentityInfo(const IdentityInfo& identity_info) override;
 
+ protected:
+  void DidFinishNavigation(
+      content::NavigationHandle* navigation_handle) override;
+
  private:
   // The WebContents the bubble UI is attached to.
   content::WebContents* web_contents_;
